# MyRoboAssistant

./: .gitignore  Cargo.toml  README.md  diagram.json  partitions.csv  sdkconfig.defaults  server.crt  server.key  server_cert.der  server_key.der  wokwi.toml
.cargo/: config.toml
src/: audio.rs  azure_tts.rs  http.rs  i2s.rs  main.rs  motors.rs  openai.rs  servo.rs  tmp.rs  util.rs
static/: chat.html  control.html  index.html  wav-encoder.js
