[package]
name    = "esp32-hello-world"
version = "0.1.0"
authors = ["Constantin Savciuc <savciuccu@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name    = "esp32-hello-world"
harness = false        # evită test-harness-ul implicit

[profile.release]
opt-level      = "z"          # cea mai agresivă optimizare pentru dimensiune
lto            = true
codegen-units  = 1
strip          = "debuginfo"  # elimină DWARF (~250-300 kB), nu doar simbolurile
panic          = "abort"      # scoate mecanismul de unwinding


[profile.dev]
debug     = true
opt-level = "z"

[features]
default      = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log          = "0.4"
anyhow       = "1"
heapless     = "0.8"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ecosistem ESP-IDF – doar ce folosești
esp-idf-svc  = { version = "0.50.1", features = ["std", "alloc"] }
embedded-svc = { version = "0.28.1",  default-features = false }

[build-dependencies]
embuild = "0.33"
