[package]
name    = "esp32-hello-world"
version = "0.1.0"
authors = ["Constantin Savciuc <savciuccu@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name    = "esp32-hello-world"
harness = false      # evită test-harness-ul implicit

[profile.release]
opt-level      = "z"
lto            = true
codegen-units  = 1
strip          = "debuginfo"
panic          = "abort"

[profile.dev]
debug     = true
opt-level = "z"

[features]
default = []
mic     = []



[dependencies]
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }  # runtime + std
esp-idf-hal = "0.45.2"                                         # periferice HAL
esp-idf-svc = "0.51"                                           # Wi-Fi, HTTP, etc.
embedded-svc = "0.28.1"                                        # ABI comun „service”

# ── utilitare generale ──────────────────────────────────────────────────────
anyhow  = "1"         # gestionare erori
log     = "0.4"
heapless = "0.8"

# ── JSON / (de)serializare pentru OpenAI & Azure TTS ───────────────────────
serde       = { version = "1", features = ["derive"], default-features = false }
serde_json  = "1"

# ── server HTTP static (serveşte fişiere din binar) ─────────────────────────
include_dir = "0.7"


[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf]
std_thread_stack_size = 24576   # 24 KB
